Bug 425958 - Fill an opaque NSView with white when Gecko refuses to draw, because not drawing anything means that garbage reaches the screen. r=mstange